# python-project-lvl2

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg  tets_diff.py
gendiff/: .diff.py.swp  .read_file.py.swp  __init__.py  cli.py  diff.py  differ.py  difference_logic.py  engine.py  parce.py  read_file.py
gendiff/diffs/: diff.py
gendiff/formatters/: .stylish.py.swp  convert_bool.py  formatter_selection.py  json.py  plain.py  stylish.py  to_json.py
gendiff/parsing/: parce.py
gendiff/scripts/: __init__.py  gendiff.py
test/: read_file.py  test_diff.py  test_generate_diff.py
test/fixtures/flat/: file4.yaml  result_json.txt
test/fixtures/recursive/: file3.yml  file4.yaml  file4.yml  result_json.txt
tests/: 1  test_gendiff.py
tests/fixtures/: file4.yaml  result.json
tests/fixtures/flat/: file3.yml  result_plain.txt
tests/fixtures/recursive/: file2.json  file3.yml  result.txt  result_to_json.txt
